--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,7 @@
 page-home {
-
+    .chat-container{
+        display:grid;
+        grid-template-rows: auto 100px;
+        grid-template-columns: 100%;
+    }
 }
